# AutoClicker

./: Cargo.toml  README.md
src/: main.rs
